update with 54 changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1908932">사용법</a></li>
+<li><a href="#orgd9082ea">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -78,9 +78,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org1908932" class="outline-2">
-<h2 id="org1908932">사용법</h2>
-<div class="outline-text-2" id="text-org1908932">
+<div id="outline-container-orgd9082ea" class="outline-2">
+<h2 id="orgd9082ea">사용법</h2>
+<div class="outline-text-2" id="text-orgd9082ea">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
@@ -100,9 +100,10 @@ afplay는 Audio File Play의 약자로
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -112,7 +113,6 @@ afplay는 Audio File Play의 약자로
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
