--- a/note/dd.html
+++ b/note/dd.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8edc19c">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#orga54e2b2">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#org31eb7ab">팁</a></li>
+<li><a href="#orgc5e6ea2">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org028ce43">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#orgda975e3">팁</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +87,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org8edc19c" class="outline-2">
-<h2 id="org8edc19c">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org8edc19c">
+<div id="outline-container-orgc5e6ea2" class="outline-2">
+<h2 id="orgc5e6ea2">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-orgc5e6ea2">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -139,9 +139,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orga54e2b2" class="outline-2">
-<h2 id="orga54e2b2">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-orga54e2b2">
+<div id="outline-container-org028ce43" class="outline-2">
+<h2 id="org028ce43">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org028ce43">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -163,9 +163,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org31eb7ab" class="outline-2">
-<h2 id="org31eb7ab">팁</h2>
-<div class="outline-text-2" id="text-org31eb7ab">
+<div id="outline-container-orgda975e3" class="outline-2">
+<h2 id="orgda975e3">팁</h2>
+<div class="outline-text-2" id="text-orgda975e3">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -173,6 +173,7 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
+</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
@@ -185,7 +186,6 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
@@ -195,6 +195,18 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 2020년 4월 22일 수정</div>
 </div>
 </div>
+</div>
+<div class="bottom-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle bottom-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
