--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -68,12 +68,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgaba02f8">단축키</a>
+<li><a href="#org7cc3c37">단축키</a>
 <ul>
-<li><a href="#org272e740">프로젝트(Project)</a></li>
-<li><a href="#orgd2cab22">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org2f3fdcf">타임라인(Timeline)</a></li>
-<li><a href="#orgfaada3d">플레이(Play or Preview)</a></li>
+<li><a href="#org22fa532">프로젝트(Project)</a></li>
+<li><a href="#org38cfd41">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org6e010a0">타임라인(Timeline)</a></li>
+<li><a href="#orgc6d7ae2">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -85,13 +85,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-orgaba02f8" class="outline-2">
-<h2 id="orgaba02f8">단축키</h2>
-<div class="outline-text-2" id="text-orgaba02f8">
+<div id="outline-container-org7cc3c37" class="outline-2">
+<h2 id="org7cc3c37">단축키</h2>
+<div class="outline-text-2" id="text-org7cc3c37">
 </div>
-<div id="outline-container-org272e740" class="outline-3">
-<h3 id="org272e740">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org272e740">
+<div id="outline-container-org22fa532" class="outline-3">
+<h3 id="org22fa532">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org22fa532">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -100,9 +100,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgd2cab22" class="outline-3">
-<h3 id="orgd2cab22">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-orgd2cab22">
+<div id="outline-container-org38cfd41" class="outline-3">
+<h3 id="org38cfd41">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org38cfd41">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -117,9 +117,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org2f3fdcf" class="outline-3">
-<h3 id="org2f3fdcf">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org2f3fdcf">
+<div id="outline-container-org6e010a0" class="outline-3">
+<h3 id="org6e010a0">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org6e010a0">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -144,9 +144,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgfaada3d" class="outline-3">
-<h3 id="orgfaada3d">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orgfaada3d">
+<div id="outline-container-orgc6d7ae2" class="outline-3">
+<h3 id="orgc6d7ae2">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orgc6d7ae2">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -156,6 +156,7 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </div>
 </div>
 </div>
+</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
@@ -168,7 +169,6 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
@@ -178,6 +178,18 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 2020년 4월 23일 수정</div>
 </div>
 </div>
+</div>
+<div class="bottom-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle bottom-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
