--- a/note/javascript.html
+++ b/note/javascript.html
@@ -68,22 +68,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd78a824">노트</a>
+<li><a href="#orgad6b11d">노트</a>
 <ul>
-<li><a href="#orgfe73b32">모듈(Module)</a></li>
-<li><a href="#org75fff03">스프레드(Spreads) 연산자</a></li>
-<li><a href="#org5c754df">튜플 비슷한 문법</a></li>
+<li><a href="#orgcc55905">모듈(Module)</a></li>
+<li><a href="#org7d49bd7">스프레드(Spreads) 연산자</a></li>
+<li><a href="#org5346296">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org9ff8968">실전(?) 메모</a>
+<li><a href="#org9a137c1">실전(?) 메모</a>
 <ul>
-<li><a href="#orgea14010">요소 얻기</a></li>
-<li><a href="#org78c45d2">특정 블록에 HTML 넣기</a></li>
-<li><a href="#orgd6d3896">콘텐츠 높이 구하기</a></li>
-<li><a href="#orge162e98">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org4f166a7">요소 얻기</a></li>
+<li><a href="#org76c96f0">특정 블록에 HTML 넣기</a></li>
+<li><a href="#orgce266b0">콘텐츠 높이 구하기</a></li>
+<li><a href="#orgb2e1874">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#orgdef4c93">외부 링크</a></li>
+<li><a href="#org1a89bd7">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -101,13 +101,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgd78a824" class="outline-2">
-<h2 id="orgd78a824">노트</h2>
-<div class="outline-text-2" id="text-orgd78a824">
+<div id="outline-container-orgad6b11d" class="outline-2">
+<h2 id="orgad6b11d">노트</h2>
+<div class="outline-text-2" id="text-orgad6b11d">
 </div>
-<div id="outline-container-orgfe73b32" class="outline-3">
-<h3 id="orgfe73b32">모듈(Module)</h3>
-<div class="outline-text-3" id="text-orgfe73b32">
+<div id="outline-container-orgcc55905" class="outline-3">
+<h3 id="orgcc55905">모듈(Module)</h3>
+<div class="outline-text-3" id="text-orgcc55905">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -159,9 +159,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org75fff03" class="outline-3">
-<h3 id="org75fff03">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org75fff03">
+<div id="outline-container-org7d49bd7" class="outline-3">
+<h3 id="org7d49bd7">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org7d49bd7">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -224,9 +224,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5c754df" class="outline-3">
-<h3 id="org5c754df">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-org5c754df">
+<div id="outline-container-org5346296" class="outline-3">
+<h3 id="org5346296">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-org5346296">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -238,13 +238,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org9ff8968" class="outline-2">
-<h2 id="org9ff8968">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org9ff8968">
+<div id="outline-container-org9a137c1" class="outline-2">
+<h2 id="org9a137c1">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org9a137c1">
 </div>
-<div id="outline-container-orgea14010" class="outline-3">
-<h3 id="orgea14010">요소 얻기</h3>
-<div class="outline-text-3" id="text-orgea14010">
+<div id="outline-container-org4f166a7" class="outline-3">
+<h3 id="org4f166a7">요소 얻기</h3>
+<div class="outline-text-3" id="text-org4f166a7">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -256,9 +256,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org78c45d2" class="outline-3">
-<h3 id="org78c45d2">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org78c45d2">
+<div id="outline-container-org76c96f0" class="outline-3">
+<h3 id="org76c96f0">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org76c96f0">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -268,9 +268,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-orgd6d3896" class="outline-3">
-<h3 id="orgd6d3896">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-orgd6d3896">
+<div id="outline-container-orgce266b0" class="outline-3">
+<h3 id="orgce266b0">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-orgce266b0">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -290,9 +290,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orge162e98" class="outline-3">
-<h3 id="orge162e98">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orge162e98">
+<div id="outline-container-orgb2e1874" class="outline-3">
+<h3 id="orgb2e1874">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-orgb2e1874">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -319,18 +319,19 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-orgdef4c93" class="outline-2">
-<h2 id="orgdef4c93">외부 링크</h2>
-<div class="outline-text-2" id="text-orgdef4c93">
+<div id="outline-container-org1a89bd7" class="outline-2">
+<h2 id="org1a89bd7">외부 링크</h2>
+<div class="outline-text-2" id="text-org1a89bd7">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -340,7 +341,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
