--- a/note/magit.html
+++ b/note/magit.html
@@ -68,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6c6b014">magit-status</a></li>
-<li><a href="#org27f2985">Stage</a></li>
-<li><a href="#org14482af">Commit</a></li>
-<li><a href="#orga6c6a83">Log</a></li>
-<li><a href="#org58690a6">Push</a></li>
-<li><a href="#orgb50dcb1">Pull</a></li>
-<li><a href="#org6c9638e">Branch</a></li>
-<li><a href="#org23f335d">Reset or Revert</a></li>
-<li><a href="#orge02ec1d">기타</a></li>
-<li><a href="#org2f613de">외부 링크</a></li>
+<li><a href="#org5259fcd">magit-status</a></li>
+<li><a href="#orgca3f483">Stage</a></li>
+<li><a href="#orgfcfa363">Commit</a></li>
+<li><a href="#org3ae93f4">Log</a></li>
+<li><a href="#orgf313387">Push</a></li>
+<li><a href="#org2f038d9">Pull</a></li>
+<li><a href="#orgf06c27b">Branch</a></li>
+<li><a href="#org0da1285">Reset or Revert</a></li>
+<li><a href="#orga124407">기타</a></li>
+<li><a href="#org73a8271">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +98,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org6c6b014" class="outline-2">
-<h2 id="org6c6b014">magit-status</h2>
-<div class="outline-text-2" id="text-org6c6b014">
+<div id="outline-container-org5259fcd" class="outline-2">
+<h2 id="org5259fcd">magit-status</h2>
+<div class="outline-text-2" id="text-org5259fcd">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -122,9 +122,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org27f2985" class="outline-2">
-<h2 id="org27f2985">Stage</h2>
-<div class="outline-text-2" id="text-org27f2985">
+<div id="outline-container-orgca3f483" class="outline-2">
+<h2 id="orgca3f483">Stage</h2>
+<div class="outline-text-2" id="text-orgca3f483">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -137,9 +137,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org14482af" class="outline-2">
-<h2 id="org14482af">Commit</h2>
-<div class="outline-text-2" id="text-org14482af">
+<div id="outline-container-orgfcfa363" class="outline-2">
+<h2 id="orgfcfa363">Commit</h2>
+<div class="outline-text-2" id="text-orgfcfa363">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -155,9 +155,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orga6c6a83" class="outline-2">
-<h2 id="orga6c6a83">Log</h2>
-<div class="outline-text-2" id="text-orga6c6a83">
+<div id="outline-container-org3ae93f4" class="outline-2">
+<h2 id="org3ae93f4">Log</h2>
+<div class="outline-text-2" id="text-org3ae93f4">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -167,25 +167,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org58690a6" class="outline-2">
-<h2 id="org58690a6">Push</h2>
-<div class="outline-text-2" id="text-org58690a6">
+<div id="outline-container-orgf313387" class="outline-2">
+<h2 id="orgf313387">Push</h2>
+<div class="outline-text-2" id="text-orgf313387">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb50dcb1" class="outline-2">
-<h2 id="orgb50dcb1">Pull</h2>
-<div class="outline-text-2" id="text-orgb50dcb1">
+<div id="outline-container-org2f038d9" class="outline-2">
+<h2 id="org2f038d9">Pull</h2>
+<div class="outline-text-2" id="text-org2f038d9">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6c9638e" class="outline-2">
-<h2 id="org6c9638e">Branch</h2>
-<div class="outline-text-2" id="text-org6c9638e">
+<div id="outline-container-orgf06c27b" class="outline-2">
+<h2 id="orgf06c27b">Branch</h2>
+<div class="outline-text-2" id="text-orgf06c27b">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -193,35 +193,36 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org23f335d" class="outline-2">
-<h2 id="org23f335d">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org23f335d">
+<div id="outline-container-org0da1285" class="outline-2">
+<h2 id="org0da1285">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org0da1285">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge02ec1d" class="outline-2">
-<h2 id="orge02ec1d">기타</h2>
-<div class="outline-text-2" id="text-orge02ec1d">
+<div id="outline-container-orga124407" class="outline-2">
+<h2 id="orga124407">기타</h2>
+<div class="outline-text-2" id="text-orga124407">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2f613de" class="outline-2">
-<h2 id="org2f613de">외부 링크</h2>
-<div class="outline-text-2" id="text-org2f613de">
+<div id="outline-container-org73a8271" class="outline-2">
+<h2 id="org73a8271">외부 링크</h2>
+<div class="outline-text-2" id="text-org73a8271">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -231,7 +232,6 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
