--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -87,9 +87,10 @@ OS X이나 macOS의 전신인 만큼,
 특히 Core Foundation 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
 물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
 </p>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -99,7 +100,6 @@ OS X이나 macOS의 전신인 만큼,
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
