--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgad3b596">외부 링크</a></li>
+<li><a href="#org4ab217f">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,14 +86,15 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-orgad3b596" class="outline-2">
-<h2 id="orgad3b596">외부 링크</h2>
-<div class="outline-text-2" id="text-orgad3b596">
+<div id="outline-container-org4ab217f" class="outline-2">
+<h2 id="org4ab217f">외부 링크</h2>
+<div class="outline-text-2" id="text-org4ab217f">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
 </div>
 </div>
+</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
@@ -106,7 +107,6 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
@@ -116,6 +116,18 @@ gtag('config', 'UA-44534026-1');
 2020년 4월 16일 수정</div>
 </div>
 </div>
+</div>
+<div class="bottom-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle bottom-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
