--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -92,9 +92,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-orgcd190d3" class="outline-2">
-<h2 id="orgcd190d3">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcd190d3">
+<div id="outline-container-org1953a61" class="outline-2">
+<h2 id="org1953a61">외부 링크</h2>
+<div class="outline-text-2" id="text-org1953a61">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
@@ -106,9 +106,10 @@ Java와 C++은 아주 혐오하는 것 같다.
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -118,7 +119,6 @@ Java와 C++은 아주 혐오하는 것 같다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
