--- a/note/flake8.html
+++ b/note/flake8.html
@@ -68,11 +68,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbdcf5c0">설치</a></li>
-<li><a href="#orgfaabadc">사용법</a></li>
-<li><a href="#org322ad5e">설정 파일</a></li>
-<li><a href="#orge5a9e49">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#orged3a659">외부 링크</a></li>
+<li><a href="#orged6592a">설치</a></li>
+<li><a href="#orge119e22">사용법</a></li>
+<li><a href="#orgf38be36">설정 파일</a></li>
+<li><a href="#orgc0df6e4">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org6d6f7eb">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -84,9 +84,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-orgbdcf5c0" class="outline-2">
-<h2 id="orgbdcf5c0">설치</h2>
-<div class="outline-text-2" id="text-orgbdcf5c0">
+<div id="outline-container-orged6592a" class="outline-2">
+<h2 id="orged6592a">설치</h2>
+<div class="outline-text-2" id="text-orged6592a">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -96,9 +96,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgfaabadc" class="outline-2">
-<h2 id="orgfaabadc">사용법</h2>
-<div class="outline-text-2" id="text-orgfaabadc">
+<div id="outline-container-orge119e22" class="outline-2">
+<h2 id="orge119e22">사용법</h2>
+<div class="outline-text-2" id="text-orge119e22">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -118,9 +118,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org322ad5e" class="outline-2">
-<h2 id="org322ad5e">설정 파일</h2>
-<div class="outline-text-2" id="text-org322ad5e">
+<div id="outline-container-orgf38be36" class="outline-2">
+<h2 id="orgf38be36">설정 파일</h2>
+<div class="outline-text-2" id="text-orgf38be36">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -152,9 +152,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orge5a9e49" class="outline-2">
-<h2 id="orge5a9e49">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orge5a9e49">
+<div id="outline-container-orgc0df6e4" class="outline-2">
+<h2 id="orgc0df6e4">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-orgc0df6e4">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -187,9 +187,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-orged3a659" class="outline-2">
-<h2 id="orged3a659">외부 링크</h2>
-<div class="outline-text-2" id="text-orged3a659">
+<div id="outline-container-org6d6f7eb" class="outline-2">
+<h2 id="org6d6f7eb">외부 링크</h2>
+<div class="outline-text-2" id="text-org6d6f7eb">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
@@ -198,9 +198,10 @@ exclude = file_to_exclude.py
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -210,7 +211,6 @@ exclude = file_to_exclude.py
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
