--- a/note/flutter.html
+++ b/note/flutter.html
@@ -68,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd1c4386">문제 해결</a>
+<li><a href="#orga9f4a9c">문제 해결</a>
 <ul>
-<li><a href="#orged02a7a">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orgfb73441">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orgb2dbca1">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org89e6203">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +87,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orgd1c4386" class="outline-2">
-<h2 id="orgd1c4386">문제 해결</h2>
-<div class="outline-text-2" id="text-orgd1c4386">
+<div id="outline-container-orga9f4a9c" class="outline-2">
+<h2 id="orga9f4a9c">문제 해결</h2>
+<div class="outline-text-2" id="text-orga9f4a9c">
 </div>
-<div id="outline-container-orged02a7a" class="outline-3">
-<h3 id="orged02a7a">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orged02a7a">
+<div id="outline-container-orgb2dbca1" class="outline-3">
+<h3 id="orgb2dbca1">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orgb2dbca1">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -126,9 +126,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orgfb73441" class="outline-3">
-<h3 id="orgfb73441">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orgfb73441">
+<div id="outline-container-org89e6203" class="outline-3">
+<h3 id="org89e6203">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org89e6203">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -163,9 +163,10 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -175,7 +176,6 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
