--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -161,18 +161,19 @@ gtag('config', 'UA-44534026-1');
 </tbody>
 </table>
 
-<div id="outline-container-orgee06ea2" class="outline-2">
-<h2 id="orgee06ea2">참고</h2>
-<div class="outline-text-2" id="text-orgee06ea2">
+<div id="outline-container-org615cb47" class="outline-2">
+<h2 id="org615cb47">참고</h2>
+<div class="outline-text-2" id="text-org615cb47">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
 </ul>
 </div>
 </div>
-<div class="mid-ad-container">
+</section>
+<div class="bottom-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle mid-ad"
+<ins class="adsbygoogle bottom-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -182,7 +183,6 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
