--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/humanlike-google-2.html">구글의 인간력(?)과의 싸움은 계속된다</a></h2>
+<div class="article-link-date">
+2020년 4월 24일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/are-you-ok-github.html">깃허브 너 괜찮니?</a></h2>
 <div class="article-link-date">
 2020년 4월 23일 작성</div>
